k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-example
  labels:
    app: nginx-example
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-example
